Further cleaned up our cache/route contexts and started implementing them in GroupOperationsBlock. The operations need to specify cacheablity now.

--- a/group.services.yml
+++ b/group.services.yml
@@ -64,6 +64,21 @@ services:
     arguments: ['@current_route_match', '@current_user', '@entity_type.manager', '@group.permissions_hash_generator']
     tags:
       - { name: 'cache.context'}
+  cache_context.route.group:
+    class: 'Drupal\group\Cache\Context\RouteGroupCacheContext'
+    arguments: ['@current_route_match']
+    tags:
+      - { name: 'cache.context'}
+  cache_context.user.group_permissions:
+    class: 'Drupal\group\Cache\Context\GroupPermissionsCacheContext'
+    arguments: ['@current_user', '@entity_type.manager', '@group.permissions_hash_generator', '@group.membership_loader']
+    tags:
+      - { name: 'cache.context'}
+  cache_context.user.is_group_member:
+    class: 'Drupal\group\Cache\Context\IsGroupMemberCacheContext'
+    arguments: ['@current_user', '@entity_type.manager', '@group.membership_loader']
+    tags:
+      - { name: 'cache.context'}
 
   group.admin_path.route_subscriber:
     class: 'Drupal\group\Routing\GroupAdminRouteSubscriber'
@@ -73,7 +88,7 @@ services:
 
   group.group_route_context:
     class: 'Drupal\group\Context\GroupRouteContext'
-    arguments: ['@current_route_match']
+    arguments: ['@current_route_match', '@string_translation']
     tags:
       - { name: 'context_provider' }
   group.membership_loader:
